Falsche Zuweisungen bei Setzen von Default-Werten für editTexts für Verbrauch innerorts und außerorts korrigiert
<corners android:bottomLeftRadius="5Odp" /> in berfin_test auskommentiert, da sonst kein Build möglich

--- a/app/src/main/res/layout/berfin_test.xml
+++ b/app/src/main/res/layout/berfin_test.xml
@@ -23,7 +23,7 @@
 
             <shape>
 
-                <corners android:bottomLeftRadius="5Odp" />
+            <!--    <corners android:bottomLeftRadius="5Odp" />  verhindert build-->
             </shape>
 
             <EditText
