--- a/app/src/main/res/layout/fragment_new_car.xml
+++ b/app/src/main/res/layout/fragment_new_car.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/checkBoxElektro"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="@string/elektro" />
+                    android:text="@string/elektrofahrzeug" />
 
                 <ImageButton
                     android:id="@+id/imageButtonElektro_info"
