--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.timeline.TimelineFragment">
 
+    <!--
     <TextView
         android:id="@+id/text_timeline"
         android:layout_width="match_parent"
@@ -19,4 +20,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    -->
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_timeline"
+        />
+
+    </ScrollView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
